<resources>
    <string name="app_name">Runner War</string>
    <string name="action_settings">Settings</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_muro">Muro</string>
    <string name="title_mapa">Mapa</string>
    <string name="title_chat">Chat</string>
    <string name="title_user_leaderboard">User leaderboard</string>
    <string name="title_cuenta">Cuenta</string>
    <string name="google_maps_key">AIzaSyCde9hpifqdn88nwA1vY6tX9feFiwKXsCI</string>
    <string name="api_key">zttr9jqf4kts</string>
    <string name="search"> + </string>


</resources>