<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_muro"
            android:icon="@drawable/ic_team_leaderboard"
            android:title="@string/title_muro"/>

    <item
            android:id="@+id/navigation_user_leaderboard"
            android:icon="@drawable/ic_user_leaderboard"
            android:title="@string/title_user_leaderboard"/>

    <item
            android:id="@+id/navigation_mapa"
            android:icon="@drawable/ic_mapa"
            android:title="@string/title_mapa"/>

    <item
            android:id="@+id/navigation_channel"
            android:icon="@drawable/ic_chat"
            android:title="@string/title_chat"/>

    <item
            android:id="@+id/navigation_cuenta"
            android:icon="@drawable/ic_cuenta"
            android:title="@string/title_cuenta"/>

</menu>