<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/navigation_muro">

    <fragment
            android:id="@+id/navigation_muro"
            android:name="com.example.runnerwar.ui.muro.MuroFragment"
            android:label="@string/title_muro"
            tools:layout="@layout/fragment_muro"
    />

    <fragment
            android:id="@+id/navigation_calendario"
            android:name="com.example.runnerwar.ui.calendario.CalendarioFragment"
            android:label="@string/title_calendario"
            tools:layout="@layout/fragment_calendario"/>

    <fragment
            android:id="@+id/navigation_mapa"
            android:name="com.example.runnerwar.ui.mapa.MapaFragment"
            android:label="@string/title_mapa"
            tools:layout="@layout/fragment_mapa"/>

    <fragment
            android:id="@+id/navigation_channel"
            android:name="com.example.runnerwar.ui.chat.ChannelFragment"
            android:label="@string/title_chat"
            tools:layout="@layout/fragment_channel">
        <action android:id="@+id/action_navigation_chat_to_users" app:destination="@id/navigation_users"/>
        <action android:id="@+id/action_navigation_users_to_chat" app:destination="@id/navigation_chat"/>
    </fragment>

    <fragment
            android:id="@+id/navigation_cuenta"
            android:name="com.example.runnerwar.ui.cuenta.CuentaFragment"
            android:label="@string/title_cuenta"
            tools:layout="@layout/fragment_cuenta"/>

    <fragment android:id="@+id/navigation_users"
              android:name="com.example.runnerwar.ui.chat.UsersFragment"
              android:label="fragment_users"
              tools:layout="@layout/fragment_users">
        <action android:id="@+id/action_navigation_users_to_chat"
                app:destination="@id/navigation_chat"/>
    </fragment>

    <fragment android:id="@+id/navigation_chat" android:name="com.example.runnerwar.ui.chat.ChatFragment"
              android:label="fragment_chat" tools:layout="@layout/fragment_chat">
        <argument android:name="channelId" app:argType="string"/>
    </fragment>
</navigation>